# robotics-datasets-hub

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/images/: generate_dashboard_preview.py
notebooks/: 01_quickstart.ipynb  02_polaris_real_data.ipynb
registry/: covla.yaml  geode.yaml  ggrt.yaml  hk_mems.yaml  hm3d_ovon.yaml  lidar_place_recognition.yaml  mcd.yaml  nuplan.yaml  openscene.yaml  point_cloud_scene_flow.yaml  polaris.yaml  slabim.yaml  tartanair.yaml
scripts/: generate_demo_screenshots.py
src/rdh/: __init__.py  app.py  cli.py  downloader.py  registry.py  visualizer.py
src/rdh/datasets/: __init__.py  covla.py  hm3d_ovon.py  mcd.py  pohang_canal.py  polaris.py
tests/: test_cli.py  test_downloader.py  test_registry.py  test_visualizers.py
